content and id updates

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -11,13 +11,23 @@
         <nav>
             <div id="profile">
                 <img src="../src/img/profuj.jpeg" alt="profile_picture" id="profile_picture">
-                <section>
-                    <h1>Bence Mohr</h1>
-                    <h3>Freshman in IT @ NHL Stenden</h3>
-                </section>
+                <div>
+                    <h1 id="name">Bence Mohr</h1>
+                    <h3 id="description">Freshman in IT @ NHL Stenden</h3>
+                </div>
             </div>
+            <ul>
+                <li><a href="" id="menu1">Home</a></li>
+                <li><a href="" id="menu2">My projects</a></li>
+                <li><a href="" id="menu3">About me</a></li>
+                <li><a href="" id="menu4">Contact</a></li>
+            </ul>
+            <p>@thebencemohr - 2024</p>
         </nav>
-        <section></section>
+        <div id="content">
+            <h1 id="welcome">Hello world.</h1>
+            <p id="intro">Hi, I'm Bence Mohr (Ben for short) , a 20-year-old international student from Hungary, currently studying Information Technology in the Netherlands. With a passion for technology and innovation, I'm dedicated to developing solutions that make a difference. Explore my projects, skills, and experiences to learn more about my journey and what I can bring to the table.</p>
+        </div>
     </main>    
 </body>
 </html>
