finished cover page and started others

--- a/welcome/index.html
+++ b/welcome/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bence Mohr</title>
-    <link rel="stylesheet" href="../src/common.css" type="text/css">    
+    <link rel="stylesheet" href="../src/styles/main.css" type="text/css">    
 </head>
 <body>
     <main>
         <nav>
             <div id="profile">
                 <img src="../src/img/profuj.jpeg" alt="profile_picture" id="profile_picture">
-                <div>
+                <div id="profile_title">
                     <h1 id="name">Bence Mohr</h1>
                     <h3 id="description">Freshman in IT @ NHL Stenden</h3>
                 </div>
             </div>
             <ul>
                 <li><a href="" id="menu1">Home</a></li>
-                <li><a href="" id="menu2">My projects</a></li>
+                <li><a href="../my-projects/" id="menu2">My projects</a></li>
                 <li><a href="" id="menu3">About me</a></li>
                 <li><a href="" id="menu4">Contact</a></li>
             </ul>
@@ -26,7 +26,9 @@
         </nav>
         <div id="content">
             <h1 id="welcome">Hello world.</h1>
-            <p id="intro">Hi, I'm Bence Mohr (Ben for short) , a 20-year-old international student from Hungary, currently studying Information Technology in the Netherlands. With a passion for technology and innovation, I'm dedicated to developing solutions that make a difference. Explore my projects, skills, and experiences to learn more about my journey and what I can bring to the table.</p>
+            <div>
+            <img src="../src/img/profuj.jpeg" alt="picture_of_me">
+            <p id="intro">Hi, I'm Bence Mohr (Ben for short), a 20-year-old international student from Hungary, currently studying Information Technology in the Netherlands. As an aspiring software developer and project manager, I have a passion for technology and innovation. I'm dedicated to developing solutions that make a difference. Explore my projects, skills, and experiences to learn more about my journey and what I can bring to the table.</p>
         </div>
     </main>    
 </body>
