project card created

--- a/my-projects/index.html
+++ b/my-projects/index.html
@@ -29,8 +29,7 @@
             <h1>Get to know my projects</h1>
             <h3>All my projects will be showcased here</h3>
         </div>
-        <div id="categories">
-
+        <div id="projects">
         </div>
     </main>
 </body>
